Fix bottom spacing of the items carosule

--- a/css/base/layout.sass
+++ b/css/base/layout.sass
@@ -103,7 +103,7 @@ body
   //   max-width: 340px
 
 .slick-dots
-  bottom: -40px !important
+  bottom: -35px !important
   @media (max-width: 330px)
     bottom: -60px !important
 
@@ -247,7 +247,7 @@ body
   margin-bottom: 2px
 
 .items
-  margin-bottom: 64px !important
+  margin-bottom: 50px !important
 
 .nutritional-facts.first
   border-right: 1px solid #D8D8D8
